--- a/ProjektPO/src/BundleLanguages/Bundle.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle.properties
@@ -25,6 +25,5 @@ trajectoryDisplay=Tor ruchu
 animationDisplay=Animacja
 velocityDisplay=Wektor pr\u0119dko\u015Bci
 velocityComponentsDisplay=Sk\u0142adowe wektora
-zoomSliderLabel=Powi\u0119kszenie:
+zoomSliderLabel=Powi\u0119kszenie
 startButton=Start
-
