Working scale added.

--- a/POProject/bin/BundleLanguages/Bundle.properties
+++ b/POProject/bin/BundleLanguages/Bundle.properties
@@ -25,5 +25,5 @@ trajectoryDisplay=Tor ruchu
 animationDisplay=Animacja
 velocityDisplay=Wektor pr\u0119dko\u015Bci
 velocityComponentsDisplay=Sk\u0142adowe wektora
-zoomSliderLabel=Powi\u0119kszenie
+zoomSliderLabel=Powi\u0119kszenie [m * 10^]
 startButton=Start
