--- a/POProject/bin/BundleLanguages/Bundle.properties
+++ b/POProject/bin/BundleLanguages/Bundle.properties
@@ -26,4 +26,5 @@ animationDisplay=Animacja
 velocityDisplay=Wektor pr\u0119dko\u015Bci
 velocityComponentsDisplay=Sk\u0142adowe wektora
 zoomSliderLabel=Powi\u0119kszenie [m * 10^]
-startButton=Start
+startButton=START
+reset=RESET
