--- a/ProjektPO/src/BundleLanguages/Bundle.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle.properties
@@ -8,18 +8,18 @@ help=Pomoc
 language=J\u0119zyk
 color=Kolor
 settings=Ustawienia
-currentVelocity=Szybko\u015B\u0107 cia\u0142a
-currentAngularMomentum=Moment P\u0119du
-currentKineticEnergy=Energia Kinetyczna
-currentPotential=Potencja\u0142
-currentEffectivePotential=Potencja\u0142 Efektywny
-currentDistance=Dystans mi\u0119dzy cia\u0142ami
-currentEnergy=Energia ca\u0142kowita
-currentReductedMass=Masa zredukowana
-centralMassInput=Masa centralna
-orbitingMassInput=Masa orbituj\u0105ca
-velocityValueInput=Warto\u015B\u0107 pr\u0119dko\u015Bci
-velocityDirectionInput=Kierunek pr\u0119dko\u015Bci
+currentVelocity=Szybko\u015B\u0107 cia\u0142a [m/s]
+currentAngularMomentum=Moment P\u0119du [kg*m^2/s]
+currentKineticEnergy=Energia Kinetyczna [J]
+currentPotential=Potencja\u0142 [J]
+currentEffectivePotential=Potencja\u0142 Efektywny [J]
+currentDistance=Dystans mi\u0119dzy cia\u0142ami [m]
+currentEnergy=Energia ca\u0142kowita [J]
+currentReductedMass=Masa zredukowana [kg]
+centralMassInput=Masa centralna [kg]
+orbitingMassInput=Masa orbituj\u0105ca [kg]
+velocityValueInput=Warto\u015B\u0107 pr\u0119dko\u015Bci [m/s]
+velocityDirectionInput=Kierunek pr\u0119dko\u015Bci [deg]
 axisDisplay=Osie
 trajectoryDisplay=Tor ruchu
 animationDisplay=Animacja
