--- a/ProjektPO/src/BundleLanguages/Bundle.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle.properties
@@ -27,4 +27,4 @@ velocityDisplay=Wektor pr\u0119dko\u015Bci
 velocityComponentsDisplay=Sk\u0142adowe wektora
 zoomSliderLabel=Powi\u0119kszenie [m * 10^]
 startButton=START
-reset=RESET
+reset=STOP
