--- a/ProjektPO/src/BundleLanguages/Bundle.properties
+++ b/ProjektPO/src/BundleLanguages/Bundle.properties
@@ -1,5 +1,6 @@
 new=Nowy
 save=Zapisz
+export=Eksportuj przebieg animacji
 write=Wczytaj
 file=Plik
 manual=Instrukcja
@@ -28,5 +29,3 @@ velocityComponentsDisplay=Sk\u0142adowe wektora
 zoomSliderLabel=Powi\u0119kszenie [m * 10^]
 startButton=START
 reset=STOP
-errorMessageTitle = wyj\u0105tek wej\u015Bcia/wyj\u0105cia
-errorMessage = Wyst\u0105pi\u0142 b\u0142\u0105d zwi\u0105zany z wczytwywaniem i odczytywaniem danych.
