--- a/POProject/bin/BundleLanguages/Bundle.properties
+++ b/POProject/bin/BundleLanguages/Bundle.properties
@@ -1,7 +1,7 @@
 new=Nowy
 save=Zapisz
 export=Eksportuj przebieg animacji
-write=Wczytaj
+read=Wczytaj
 file=Plik
 manual=Instrukcja
 about=O programie
@@ -29,3 +29,9 @@ velocityComponentsDisplay=Sk\u0142adowe wektora
 zoomSliderLabel=Powi\u0119kszenie [m * 10^]
 startButton=START
 reset=STOP
+errorMessageTitle = wyj\u0105tek wej\u015Bcia/wyj\u0105cia
+errorMessage = Wyst\u0105pi\u0142 b\u0142\u0105d zwi\u0105zany z wczytwywaniem i odczytywaniem danych.
+error = B\u0142\u0105d
+whatHappened = Wpisano z\u0142e dane.
+thetaError =  K\u0105t nale\u017Cy do przedzia\u0142u od -90 do 270 stopni.
+notOrbital = To nie jest ruch orbitalny.
